# my_manim_cast_lib

./: .gitignore  HOW_TO_ADD_SVG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: creature_demo.py  list_modes.py
my_manim_lib/: STATUS.md  __init__.py  animations.py  creatures.py  mobjects.py
my_manim_lib/creatures/: README.md  __init__.py  base.py  custom.py  registry.py
