[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_manim_lib"
version = "0.3.0"
description = "Custom Manim animations, mobjects, and multi-SVG creatures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "manim",
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["my_manim_lib*"]

[tool.setuptools.package-data]
my_manim_lib = [
    "STATUS.md",
    "assets/*.svg",
    "assets/creatures/*.svg",
    "creatures/README.md",
]
